--- a/future-test/src/css/modalForm.css
+++ b/future-test/src/css/modalForm.css
@@ -1,22 +1,29 @@
 .modal {
-  display: block; 
-  position: fixed; 
-  z-index: 1; 
+  display: block;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; 
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; 
+  width: 80%;
+  padding-left: 10px;
+}
+.modal-content button {
+  margin-top: 10px;
+}
+.modal-content label {
+  color: red;
 }
 
 .close {
@@ -31,4 +38,13 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal__inputs {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+}
+.modal__inputs input {
+  margin-right: 20px;
 }
