--- a/future-test/src/css/style.css
+++ b/future-test/src/css/style.css
@@ -37,13 +37,39 @@ main {
 }
 .infoTable__search > * {
   float: right;
-  margin: 5px 10px;
 }
 .infoTable__search > button {
   width: 30px;
   height: 10px;
 }
 
+.infoTable__top {
+  width: 80%;
+  display: flex;
+}
+.infoTable__top #myBtn {
+  width: 150px;
+  height: 30px;
+  font-size: 14px;
+  border: 2px solid #4caf50;
+  border-radius: 14px;
+  padding: 4px 5px;
+  background-color: transparent;
+  margin: 5px 10px;
+}
+.infoTable__search button {
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
+  border: 2px solid #4caf50;
+  border-radius: 5px;
+  padding: 3px 4px 5px 4px;
+  background-color: transparent;
+  margin: 5px 10px;
+}
+.infoTable__search input {
+  margin: 9px 10px 12px 10px;
+}
 .infoTable__table {
   margin: 10px auto;
   width: 80%;
@@ -85,8 +111,7 @@ main {
   display: flex;
   flex-direction: column;
 }
-.fullInfo label {
-}
+
 .fullInfo textarea {
   width: 60%;
   float: right;
