--- a/future-test/src/css/style.css
+++ b/future-test/src/css/style.css
@@ -106,14 +106,14 @@ main {
 .infoTable__pag div:hover {
   cursor: pointer;
 }
-.fullInfo {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-}
 
-.fullInfo textarea {
-  width: 60%;
-  float: right;
-  resize: none;
+.moreData {
+  margin: 20px 0px;
+}
+.moreData p {
+  margin: 5px 0px;
+}
+.moreData textarea {
+  width: 500px;
+  height: 70px;
 }
